--- a/web/positioning/style.css
+++ b/web/positioning/style.css
@@ -5,6 +5,8 @@
 }
 
 div {
+    position: relative;
+    /* default - position: static */
     width: 200px;
     height: 200px;
     margin: 1rem;
@@ -27,7 +29,15 @@ div {
 } */
 
 div:nth-of-type(2) {
+    position: fixed;
+    /* absolute is relative to the body / parent container 
+    relative is relative to the next cascading position */
     background-color: blue;
+    left: 150px;
+    top: 100px;
+    z-index: 10;
+    /* z-index is foreground/background i.e. 'send to back' 
+    all elements have a z-index of 0 */
 }
 
 div:nth-of-type(3) {
